--- a/readme.org
+++ b/readme.org
@@ -18,4 +18,4 @@ Repository used for deploying https://hoodiemoder.github.io
   - Mobile
     - 720-1080p
     - 4-6 inches
-    - 60 fps
+    - 30-60 fps
